--- a/Mieliala_app/app/src/main/AndroidManifest.xml
+++ b/Mieliala_app/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.bargraph2">
+    package="com.example.mieliala_app">
 
     <application
         android:allowBackup="true"
