--- a/Mieliala_app/gradle/wrapper/gradle-wrapper.properties
+++ b/Mieliala_app/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Mar 29 19:44:50 EEST 2020
+#Thu Mar 12 13:37:54 EET 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
