--- a/Mieliala_app/app/build.gradle
+++ b/Mieliala_app/app/build.gradle
@@ -28,5 +28,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.divyanshu.colorseekbar:colorseekbar:1.0.2'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
 
+}
+
+repositories {
+    maven { url 'https://jitpack.io' }
 }
