--- a/Mieliala_app/app/build.gradle
+++ b/Mieliala_app/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
+    implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
 
 }
 
